Bug 419770. Can't get to the frame/iframe of a document with IAccessible::accParent